--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "client",
-  "private": true,
-  "version": "0.0.0",
+  "name": "todo-app-client",
+  "version": "1.0.0",
+  "description": "React + TypeScript frontend for Todo App",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/romimar/todo-app.git"
+  },
+   "author": "romimar",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
