--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "server",
+  "name": "todo-app-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Express.js backend for Todo App with Swagger API documentation",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/romimar/todo-app.git"
+  },
+  "author": "romimar",
+  "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
