--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/romimar/todo-app.git"
   },
-   "author": "romimar",
+  "author": "romimar",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toggle": "^1.1.10",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
